# GCDPy

./: README.md  pyproject.toml
src/GCD.package/: GCD.py
