[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "GCD.package"
version = "0.0.1"
authors = [
    { name = "Jude", email = "s5308442@stu.fwisd.org" },
]
description = "A greatest common denominator function"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage"="https://github.com/JudeWhite512/GCDPython"